<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_action_search"
        android:contentDescription="@string/cover_image" />
        
	<TextView
        android:id="@+id/verifyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/imageView1"
        android:text="@string/verify_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
       
	<EditText
	    android:id="@+id/gameTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="20dp"
	    android:layout_below="@+id/imageView1"
	    android:layout_toRightOf="@+id/verifyTitle"
	    android:inputType="text" />
       
    <TextView
        android:id="@+id/verifyPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/verifyTitle"
        android:text="@string/verify_publisher"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/gamePublisher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/gameTitle"
        android:layout_toRightOf="@+id/verifyPublisher" />
    
    <Button 
        android:id="@+id/verifyBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/verifyPublisher"
        android:text="@string/back" />
    
    <Button
        android:id="@+id/verifyOk"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/gamePublisher"
        android:layout_alignParentRight="true"
        android:text="@string/ok" />
    
</RelativeLayout>